Mon Nov 28 20:36:09 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tao/tao.mpc:

          Set skel_export_macro and skel_export_include for Policy.pidl.

Mon Nov 28 19:14:23 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/tao.mpc:
          Policy.pidl shouldn't use -Sorb

Mon Nov 28 15:41:10 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_visitor_interface/direct_proxy_impl_sh.cpp:
        * TAO_IDL/be_include/be_interface.h:
          Reduced amount of static methods generated for direct collocation.
          Next step is to move the direct collocation static methods into
          the regular skeleton, there is really no need for its own
          special class hierarchy

        * tests/Skeleton_Inheritance/skel_inheritance.mpc:
          Enable direct collocation

Mon Nov 28 14:29:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client.cpp:
        * tao/ImR_Client/ImplRepo.pidl:
        * tao/PortableServer/Operation_Table_Dynamic_Hash.cpp:
        * tao/PortableServer/Operation_Table_Perfect_Hash.cpp:
          Const and layout changes

Mon Nov 28 14:09:16 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_exception/exception_cs.cpp:
          Generate _tao_type for policy exceptions

Mon Nov 28 12:57:57 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * bin/tao_orb_tests.lst:

          Removed !FIXED_BUGS_ONLY for Bug_3000_Regression since this
          might be fixed.

Mon Nov 28 12:28:14 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Base.h:
        * tao/PortableServer/Servant_Base.cpp:
          Disable serveral methods with CORBA/e or minimum corba, fixes
          bugzilla 3019

Mon Nov 28 10:49:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb: